# levante-bench

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml  requirements-dev.txt  requirements-transformers.txt  requirements.txt
comparison/: README.md  compare_levante.R  stats-helper.R
configs/: experiment.yaml  experiment_qwen35_4b.yaml
docs/: README.md  adding_models.md  adding_tasks.md  data_schema.md  releases.md  secrets_setup.md
notebooks/: egma_math_phase_experiments.ipynb  mrot_internvl8b_phase_experiments.ipynb  mrot_internvl_phase_experiments.ipynb  mrot_phase_experiments.ipynb  stories_phase_experiments.ipynb  vocab_phase_experiments.ipynb
scripts/: README.md  analyze_math_type_accuracy.py  build_math_prompts.py  download_levante_assets.py  download_levante_data.R  experiment_egma_math_phases.py  experiment_mrot_internvl_phases.py  experiment_mrot_phases.py  experiment_stories_phases.py  experiment_vocab_phases.py  plot_results.py  run_all_egma_math_phases.sh  run_all_mrot_internvl8b_phases.sh  run_all_mrot_internvl_phases.sh  run_all_mrot_phases.sh  run_all_stories_phases.sh  run_all_vocab_phases.sh  run_benchmark_v1.py  run_smolvlmv2_math_eval.py  run_smolvlmv2_tom_eval.py  run_tom_modal_eval.py  run_tom_robustness.py  run_tom_symbolic_engine.py  summarize_egma_math_phases.py  summarize_mrot_internvl8b_phases.py  summarize_mrot_internvl_phases.py  summarize_mrot_phases.py  summarize_stories_phases.py  summarize_vocab_phases.py  validate_all.sh
tests/: test_parsing_logic.py  test_runner_utils.py  test_scoring_and_aggregation.py
(+227 files in other folders)
